test/ddc-spec/source/01-Tetra/02-Error/01-ErrorExp/10-AppNotFun/Test.error.check
Error in transformed module.
  in stage SourceLoadText
  in pipe  PipeCoreCheck/Check
  test/ddc-spec/source/01-Tetra/02-Error/01-ErrorExp/10-AppNotFun/Test.ds:8:1
  Cannot apply non-function
                of type: Nat#
