test/ddc-spec/source/01-Tetra/02-Error/01-ErrorExp/10-AppNotFun/Test.ds

module Test
where

f: Nat#
 = 5

g = f 5


